# NeuralNetwork

./: .gitignore  BaseEdge.cpp  BaseEdge.h  BaseNeuralNetwoek.cpp  BaseNeuralNetwoek.h  BaseNeuron.cpp  BaseNeuron.h  CMakeLists.txt  SigmoidNeuron.h  main.cpp  simple_network.txt
lib/Activations/BaseActivation/: BaseActivationFunction.h
lib/Activations/SimpleActivations/: ELU.h  Identitiy.h  ReLU.h  Sigmoid.h  Tanh.h
lib/BaseClasses/: BaseEdge.h  BaseEdge.tpp  BaseNeuralNetwork.h  BaseNeuron.h  BaseNeuron.tpp
lib/BaseClasses/Edges/: BaseEdge.h  BaseEdge.tpp
lib/BaseClasses/Neurons/: BaseInputNeuron.h  BaseInputNeuron.tpp  BaseNeuron.h  BaseNeuron.tpp  BaseOutputNeuron.h  BaseOutputNeuron.tpp
lib/Edges/: BaseEdge.h  BaseEdge.tpp
lib/Edges/BaseEdges/: BaseEdge.h  BaseEdge.tpp
lib/Edges/SimpleEdges/: ConstantEdge.h  ConvolutionalEdge.cpp  ConvolutionalEdge.h  SharedEdge.h  SharedEdge.tpp
lib/Layers/BaseLayers/: BaseHiddenLayer.h  BaseHiddenLayer.tpp  BaseInputLayer.h  BaseInputLayer.tpp  BaseLayer.h  BaseLayer.tpp  BaseOutputLayer.h  BaseOutputLayer.tpp
lib/Layers/SimpleLayers/: Convolution.h  Convolution.tpp  FullyConnected.cpp  FullyConnected.h  FullyConnected.tpp  OneToOne.h  OneToOne.tpp
lib/LossFunctions/BaseLoss/: BaseLossFunction.h
lib/LossFunctions/SimpleLossFunctions/: CrossEntropyCost.h  MeanSquaredError.h
lib/Network/: BaseNeuralNetwork.h  BaseNeuralNetwork.tpp  DynamicNetwork.h  DynamicNetwork.tpp  NeuralNetwork.h  NeuralNetwork.tpp
lib/Neurons/: SigmoidNeuron.h  SigmoidNeuron.tpp
lib/Neurons/BaseNeurons/: BaseBias.h  BaseBias.tpp  BaseInputNeuron.h  BaseInputNeuron.tpp  BaseNeuron.h  BaseNeuron.tpp  BaseOutputNeuron.h  BaseOutputNeuron.tpp
lib/Neurons/SimpleNeurons/: Bias.h  Bias.tpp
lib/Utilities/: MNIST.h  MathOperations.h  NeuronOperations.h  Util.h
test/layers/: ConvolutionTestConnections.h  ConvolutionTestMNIST.h  FullyConnectedTestDataMiningProject.h  LayerTestMNIST.h  LayerTestXOR.h  OneToOneTest.h
test/network/: DynamicNetworkTest.h  NetworkBucketTest.h  NetworkMNISTtest.h
test/neurons/: NeuronTest.h
tests/TestLayers/: ConvolutionTestConnections.h  ConvolutionTestMNIST.h  FullyConnectedTestDataMiningProject.h  LayerTest.h  LayerTestMNIST.h  LayerTestXOR.h  OneToOneTest.h
tests/TestNetwork/: DynamicNetworkTest.h  NetworkBucketTest.h  NetworkMNISTtest.h
tests/TestNeurons/: NeuronTest.h
